RabbitMQAPI/deploy/KS8/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app.kubernetes.io/name: "rabbitmqapi-service"
    app.kubernetes.io/version: "v1"
  name: "rabbitmqapi-service"
  namespace: "rabbitmqapi-service-prod"
spec: 
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector: 
    app.kubernetes.io/name: "rabbitmqapi"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  type: "ClusterIP"
