RabbitMQAPI/deploy/KS8/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: "rabbitmq_api-main"
  namespace: "rabbitmq_api-main"
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
      kubernetes.io/ingress.class: nginx
spec:
  rules:
    -host: rabbitmq_api-main.castrolanda.com.br
      http:
        paths:
          -backend:
            serviceName: rabbitmq_api-main
            servicePort: 8080
          path: /rabbitmq_api-main(/|$).(.*)
